--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM php:7.0
 COPY . /usr/src/myapp
 WORKDIR /usr/src/myapp
-CMD [ "php", "./vendor/autoload.php" ]
+expose 80
+CMD [ "php", "-S localhost:80" ]
