--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "require": {
         "twig/twig": "~3.0",
       "ext-pdo": "*",
-      "ext-json": "*"
+      "ext-json": "*",
+      "phpunit/phpunit": "^9.5",
+        "phpmailer/phpmailer": "^6.6"
     },
     "autoload": {
         "psr-4": {
