--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "require": {
-        "twig/twig": "~3.0",
-      "ext-pdo": "*",
-      "ext-json": "*",
-      "phpunit/phpunit": "^9.5",
-        "phpmailer/phpmailer": "^6.6"
-    },
+    "name": "testunitaire/bloc5",
     "autoload": {
         "psr-4": {
-            "Core\\": "Core/",
-            "App\\": "App/"
+            "Testunitaire\\Bloc5\\": "src/"
         }
-    }
+    },
+    "authors": [
+        {
+            "name": "VideGrenierEnLigne",
+            "email": "leopold.ardouin@viacesi.fr"
+        }
+    ],
+    "require": {}
 }
