--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,49 @@
 version: "3"
 services:
-    mysql_production:
-        container_name: mysql_production
-        image: 'mysql:latest'
-        restart: 'always'
-        environment:
-          MYSQL_USER: webapplication
-          MYSQL_PASSWORD: "cesi"
-          MYSQL_DATABASE: vide-grenier
-          MYSQL_ROOT_PASSWORD: "root"
-          
+  bddpreprod:
+    container_name: bddpreprod
+    image: "mysql:latest"
+    restart: "always"
+    environment:
+      MYSQL_USER: webapplication
+      MYSQL_PASSWORD: "cesi"
+      MYSQL_DATABASE: vide-grenier
+      MYSQL_ROOT_PASSWORD: "root"
+    ports:
+      - "9000:80"
+    volumes:
+      - bddpreprod:/var/lib/mysql
+      - ./sql/import.sql:/docker-entrypoint-initdb.d/import.sql
 
+  phpmyadmin_preproduction:
+    image: phpmyadmin/phpmyadmin:latest
+    restart: always
+    ports:
+      - "9001:80"
+    depends_on:
+      - bddpreprod
+    environment:
+      PMA_HOST: bddpreprod
 
-        ports:
-          - '9000:80'
-        volumes:
-          - ./sql/import.sql:/docker-entrypoint-initdb.d/import.sql
-        
-    phpmyadmin_production:
-        image: phpmyadmin/phpmyadmin:latest
-        restart: always
-        ports:
-          - "9001:80"
-        depends_on:
-          - mysql_production
-        environment:
-          PMA_HOST: mysql_production
-    
-    videgrenier_production:
-        image: 'videgrenier'
-        ports:
-          - '8080:80'
-        build:
-          context: .
-          dockerfile: Dockerfile
-        environment:
-          ALLOW_OVERRIDE: 'true'
-          # user: "root"
-          # db: "mysql_production"
-          # password: "root"
-          MYSQL_HOST: mysql_production
-          MYSQL_USER: webapplication
-          MYSQL_PASSWORD: "cesi"
+  videgrenier_preproduction:
+    image: "videgrenierpreprod"
+    ports:
+      - "8080:80"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      ALLOW_OVERRIDE: "true"
+      MYSQL_HOST: bddpreprod
+      MYSQL_USER: webapplication
+      MYSQL_PASSWORD: "cesi"
 
-        depends_on:
-          - mysql_production
+    depends_on:
+      - bddpreprod
 
-        links: 
-          - mysql_production:mysql
+    links:
+      - bddpreprod:mysql
 
-
-       
-        
-     
+volumes:
+  bddpreprod:
+    external: true
